Logging for building zip for checking and for runcsjob
+ Changes on profile page
+ Fixing admin's links in new comments
+ Change log format for Ulearn.Web

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -120,7 +120,7 @@
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <encoding value="utf-8" />
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}]:%newline → %message%newline" />
+        <param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}] — %message%newline" />
       </layout>
     </appender>
   </log4net>
