--- a/src/GiftsGranter/packages.config
+++ b/src/GiftsGranter/packages.config
@@ -4,6 +4,9 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net471" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net471" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net47" />
@@ -21,10 +24,14 @@
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net47" />
   <package id="System.Console" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net47" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
@@ -40,6 +47,7 @@
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net47" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
@@ -54,12 +62,19 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
   <package id="Telegram.Bot" version="13.2.1" targetFramework="net47" />
 </packages>
