--- a/src/GiftsGranter/packages.config
+++ b/src/GiftsGranter/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net471" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
