--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -218,8 +218,10 @@
   <ItemGroup>
     <Compile Include="CSharp\ArrayGetLengthValidation\ArrayLengthStylePrimitives_should.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\ArrayLengthStyleValidator_should.cs" />
+    <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\ArrayAssignedInCycleOrInnerCycle.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\GetLengthNotInCycle.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\GetLengthOfArrayCreatedInTheSameCycle.cs" />
+    <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\GetLengthOfArrayThatUsedAsMethodArgument.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\GetLengthWithVariable.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\NoGetLengthCall.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInDoWhileCycle.cs" />
