fix checking for assignment and add tests

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -243,10 +243,12 @@
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\GetLengthOfArrayThatUsedAsMethodArgument.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\GetLengthWithVariable.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Correct\NoGetLengthCall.cs" />
+    <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\AssignToArrayElement.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInDoWhileCycle.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInForCycle.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInForeachCycle.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInInnerCycle.cs" />
+    <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInMethodCall.cs" />
     <Compile Include="CSharp\ArrayGetLengthValidation\TestData\Incorrect\GetLengthInWhileCycle.cs" />
     <Compile Include="CSharp\BoolCompareValidation\BoolCompareValidator_should.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Correct\NullableCompare.cs" />
