Code review comments by users and instructors

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -597,6 +597,10 @@
     <Compile Include="Migrations\201802121225237_AddAntiPlagiarismSubmissionId.Designer.cs">
       <DependentUpon>201802121225237_AddAntiPlagiarismSubmissionId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802261841382_AddExerciseCodeReviewComments.cs" />
+    <Compile Include="Migrations\201802261841382_AddExerciseCodeReviewComments.Designer.cs">
+      <DependentUpon>201802261841382_AddExerciseCodeReviewComments.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -609,6 +613,7 @@
     <Compile Include="Models\CourseVersion.cs" />
     <Compile Include="Models\EnabledAdditionalScoringGroup.cs" />
     <Compile Include="Models\ExerciseCodeReview.cs" />
+    <Compile Include="Models\ExerciseCodeReviewComment.cs" />
     <Compile Include="Models\ExerciseSolutionByGrader.cs" />
     <Compile Include="Models\FeedUpdateTimestamp.cs" />
     <Compile Include="Models\GraderClient.cs" />
@@ -930,6 +935,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802121225237_AddAntiPlagiarismSubmissionId.resx">
       <DependentUpon>201802121225237_AddAntiPlagiarismSubmissionId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802261841382_AddExerciseCodeReviewComments.resx">
+      <DependentUpon>201802261841382_AddExerciseCodeReviewComments.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
