add return statment validation

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -259,6 +259,7 @@
     <Compile Include="CSharp\BoolCompareValidation\TestData\Correct\SimpleIf.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Incorrect\IfWithBool.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Incorrect\TernaryOperatorWithBool.cs" />
+    <Compile Include="CSharp\BracketValidator_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportError_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportWarning_should.cs" />
     <Compile Include="CSharp\ExponentiationValidation\ExponentiationValidator_should.cs" />
