--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build-dll": "webpack --config webpack.dll-config.js",
     "build-ui-test": "webpack --config webpack.ui-test-config.js",
     "build-unit-test": "webpack --config webpack.unit-test-config.js",
-    "run-ui-test": "node dist/ui-test.js",
-    "run-unit-test": "node dist/unit-test/index.js"
+    "run-ui-test": "node dist/ui_test.js",
+    "run-unit-test": "node dist/unit_test/index.js",
+    "precommit": "pretty-quick --staged"
   },
   "dependencies": {
     "react": "^16.2.0",
@@ -23,8 +24,14 @@
     "@babel/preset-stage-0": "^7.0.0-beta.40",
     "babel-loader": "^8.0.0-beta.2",
     "chai": "^4.1.2",
+    "css-loader": "^0.28.10",
+    "html-webpack-plugin": "^3.0.4",
+    "husky": "^0.14.3",
     "mocha": "^5.0.1",
+    "prettier": "^1.11.1",
+    "pretty-quick": "^1.4.1",
     "puppeteer": "^1.1.1",
+    "style-loader": "^0.20.2",
     "webpack": "^4.0.0",
     "webpack-cli": "^2.0.9",
     "webpack-glob-entries": "^1.0.1",
