Update ref validator

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -287,9 +287,9 @@
     <Content Include="CSharp\testProject\projDir\AnotherTask.WrongAnswer.88.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Compile Include="CSharp\TryPatternValidation\TestData\Correct\TryPatternValidationTestDataClass.cs" />
-    <Compile Include="CSharp\TryPatternValidation\TestData\Incorrect\TryPatternValidationTestDataClass.cs" />
-    <Compile Include="CSharp\TryPatternValidation\TryPatternValidator_should.cs" />
+    <Compile Include="CSharp\RefArgumentsValidation\TestData\Correct\RefArgumentsValidationTestDataClass.cs" />
+    <Compile Include="CSharp\RefArgumentsValidation\TestData\Incorrect\RefArgumentsValidationTestDataClass.cs" />
+    <Compile Include="CSharp\RefArgumentsValidation\RefArgumentsValidator_should.cs" />
     <Compile Include="CSharp\VerbInMethodNameValidator_should.cs" />
     <Compile Include="CSharp\testProject\projDir\inner-dir-1\inner-dir-2\ExcludeMeForStudent.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
