--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -912,6 +912,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.refresh-animate.css" />
+    <Content Include="Content\bootstrap.ulearn.css" />
     <Content Include="Content\bounce.css" />
     <Content Include="Content\buttons.css" />
     <Content Include="Content\font-awesome.css" />
