--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -605,6 +605,10 @@
     <Compile Include="Migrations\201803051837207_AddSubmissionReferenceToExerciseCodeReview.Designer.cs">
       <DependentUpon>201803051837207_AddSubmissionReferenceToExerciseCodeReview.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803151326386_AddMassGroupOperationNotifications.cs" />
+    <Compile Include="Migrations\201803151326386_AddMassGroupOperationNotifications.Designer.cs">
+      <DependentUpon>201803151326386_AddMassGroupOperationNotifications.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -945,6 +949,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803051837207_AddSubmissionReferenceToExerciseCodeReview.resx">
       <DependentUpon>201803051837207_AddSubmissionReferenceToExerciseCodeReview.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803151326386_AddMassGroupOperationNotifications.resx">
+      <DependentUpon>201803151326386_AddMassGroupOperationNotifications.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
