Add correct validation of classes and methods attributes

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -262,6 +262,7 @@
     <Compile Include="CSharp\BracketValidator_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportError_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportWarning_should.cs" />
+    <Compile Include="CSharp\ExcessLinesValidation\TestData\MockAttribute.cs" />
     <Compile Include="CSharp\ExponentiationValidation\ExponentiationValidator_should.cs" />
     <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\DegreeIsWrappedByVariable.cs" />
     <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\DegreeNotEqualsToTwoOrThree.cs" />
