--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -312,6 +312,7 @@
     <Compile Include="CSharp\RefArgumentsValidation\RefArgumentsValidator_should.cs" />
     <Compile Include="CSharp\SpellingValidation\SpellingValidator_should.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithAmeticanVariantOfEnglish.cs" />
+    <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithExceptions.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithoutMisspellings.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Incorrect\FileWithBritishVariantOfEnglish.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Incorrect\FileWithMisspellings.cs" />
