First version of course controller for Web.Api
Upgrade Microsoft.EntityFramework to 2.1.0-preview1-final

--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Database.Core\Database.Core.csproj" />
     <ProjectReference Include="..\RunCsJob.Api\RunCsJob.Api.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\Parameters" />
+    <Folder Include="Models\Results" />
+  </ItemGroup>
 </Project>
