--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -1,13 +1,31 @@
 {
-    "port": 33333,
+    "port": 8000,
     "environment": "dev",
     "airlock": {
         "apiKey": "UniversalApiKey",
-        "host": "http://localhost:6306"
+        "host": "https://vostok.skbkontur.ru"
     },
     "hostLog": {
         "console": true,
-        "pathFormat": "logs/log-{Date}.log"
+        "pathFormat": "logs/log-{Date}.log",
+        "minimumLevel": "debug"
     },
-    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
+    "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
+
+    
+    " ULEARN CONFIGURATION ": " ↓↓↓↓↓  ",
+    
+    "coursesDirectory": "../Courses/",
+    "baseUrl": "https://localhost:44300",
+    "telegram": {
+        "botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
+        "errors": {
+            "channel": ""
+        }
+    },
+    "buildExerciseStudentZips": true,
+    "exerciseStudentZipsDirectory": "",
+    "certificates": {
+        "directory": ""
+    }
 }
