--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -27,5 +27,8 @@
     "exerciseStudentZipsDirectory": "",
     "certificates": {
         "directory": ""
+    },
+    "web": {
+        "cookieKeyRingDirectory": "../cookie_protection_keys/"
     }
 }
