Get cookie domain from config files

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -11,9 +11,6 @@
         "minimumLevel": "debug"
     },
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
-
-    
-    " ULEARN CONFIGURATION ": " ↓↓↓↓↓  ",
     
     "coursesDirectory": "../Courses/",
     "baseUrl": "https://localhost:44300",
@@ -29,6 +26,7 @@
         "directory": ""
     },
     "web": {
-        "cookieKeyRingDirectory": "../cookie_protection_keys/"
+        "cookieKeyRingDirectory": "../cookie_protection_keys/",
+        "cookieDomain": "localhost"
     }
 }
