--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -13,6 +13,7 @@
         "directory": ""
     },
     "web": {
-        "cookieKeyRingDirectory": "../cookie_protection_keys/"
+        "cookieKeyRingDirectory": "../cookie_protection_keys/",
+        "cookieDomain": "localhost"
     }
 }
