Fix different small issues
Fix bug in course tool when procesing slide with new meta tags

--- a/src/CourseTool/packages.config
+++ b/src/CourseTool/packages.config
@@ -17,6 +17,15 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
@@ -60,6 +69,7 @@
   <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
