Vostok repositories have been moved to myget.org

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -6,13 +6,6 @@
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="Kontur nuget" value="http://nuget.kontur/api/v2" />
-    <add key="vostok.core" value="https://ci.appveyor.com/nuget/vostok-core" />
-    <add key="vostok.hosting" value="https://ci.appveyor.com/nuget/vostok-hosting" />
-    <add key="vostok.hosting.core" value="https://ci.appveyor.com/nuget/vostok-hosting-core" />
-    <add key="vostok.instrumentation.aspnetcore" value="https://ci.appveyor.com/nuget/vostok-instrumentation-aspnetcore" />
-    <add key="vostok.logging.serilog" value="https://ci.appveyor.com/nuget/vostok-logging-serilog" />
-    <add key="vostok.clusterclient" value="https://ci.appveyor.com/nuget/vostok-clusterclient" />
-    <add key="vostok.clusterclient.transport.http" value="https://ci.appveyor.com/nuget/vostok-clusterclient-transport-http" />
-    <add key="vostok.airlock.client" value="https://ci.appveyor.com/nuget/vostok-airlock-client" />
+    <add key="Vostok" value="https://www.myget.org/F/vostok/api/v3/index.json" />
   </packageSources>
 </configuration>
