Send keep alive metrics from runcsjob

--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -3,6 +3,10 @@
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
+    <connectionStrings>
+        <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
+        <add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local"/>
+    </connectionStrings>
 	<appSettings>
 		<!-- Url to Ulearn.Web instance. I.E. https://ulearn.me -->
 		<add key="submissionsUrl" value="https://localhost:44300/" />
