Replace some async EF calls with syncs because of perfomance issues

--- a/src/AntiPlagiarism.UpdateDb/appsettings.json
+++ b/src/AntiPlagiarism.UpdateDb/appsettings.json
@@ -1,6 +1,12 @@
 {
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
 
+    "hostLog": {
+        "console": true,
+        "pathFormat": "logs/log-{Date}.log",
+        "minimumLevel": "debug"
+    },
+    
     "antiplagiarism": {
         "snippetTokensCount": 12
     }
