`enableEntityFrameworkLogging` option in AntiplagiarismUpdateDb

--- a/src/AntiPlagiarism.UpdateDb/appsettings.json
+++ b/src/AntiPlagiarism.UpdateDb/appsettings.json
@@ -4,7 +4,8 @@
     "hostLog": {
         "console": true,
         "pathFormat": "logs/log-{Date}.log",
-        "minimumLevel": "debug"
+        "minimumLevel": "debug",
+        "enableEntityFrameworkLogging": true
     },
     
     "antiplagiarism": {
