Show additional information about  plagiarisms

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -17,7 +17,9 @@
         "maxCodeLength": 100000,
         "statisticsAnalyzing": {
             "countOfLastAuthorsForCalculatingMeanAndDeviation": 100,
-            "recalculateStatisticsAfterSubmisionsCount": 1000
+            "recalculateStatisticsAfterSubmisionsCount": 1000,
+            "faintSuspicionCoefficient": 5,
+            "strongSuspicionCoefficient": 6
         },
         "plagiarismDetector": {
             "countOfColdestSnippetsUsedToSearch": 300
