Add new configuration variable: snippetAuthorsCountThreshold
Increase default value of countOfColdestSnippetsUsedToSearch from 300 to 1000.
Re-create snippetsRepo in AntiplagiarismUpdateDb for each bunch of submissions
Add .AsNoTracking() for prevent erros on antiplagiarism

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -19,10 +19,11 @@
             "countOfLastAuthorsForCalculatingMeanAndDeviation": 100,
             "recalculateStatisticsAfterSubmisionsCount": 1000,
             "faintSuspicionCoefficient": 5,
-            "strongSuspicionCoefficient": 6
+            "strongSuspicionCoefficient": 7
         },
         "plagiarismDetector": {
-            "countOfColdestSnippetsUsedToSearch": 300
+            "countOfColdestSnippetsUsedToSearch": 1000,
+            "snippetAuthorsCountThreshold": 1000
         },
         "actions": {
             "getAuthorPlagiarisms": {
