Minimal suspicion level

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -19,7 +19,8 @@
             "countOfLastAuthorsForCalculatingMeanAndDeviation": 100,
             "recalculateStatisticsAfterSubmisionsCount": 1000,
             "faintSuspicionCoefficient": 5,
-            "strongSuspicionCoefficient": 7
+            "strongSuspicionCoefficient": 7,
+            "minSuspicionLevel": 0.25
         },
         "plagiarismDetector": {
             "countOfColdestSnippetsUsedToSearch": 1000,
