Minimal faint and strong suspicion level

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -20,7 +20,8 @@
             "recalculateStatisticsAfterSubmisionsCount": 1000,
             "faintSuspicionCoefficient": 5,
             "strongSuspicionCoefficient": 7,
-            "minSuspicionLevel": 0.25
+            "minFaintSuspicionLevel": 0.25,
+            "minStrongSuspicionLevel": 0.4
         },
         "plagiarismDetector": {
             "countOfColdestSnippetsUsedToSearch": 1000,
