Support of submissions for non-checking languages (ie. java or javascript)
Those submissions don't have AutomaticChecking

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -656,6 +656,10 @@
     <Compile Include="Migrations\201804260950525_ApplicationUserIsDeleted.Designer.cs">
       <DependentUpon>201804260950525_ApplicationUserIsDeleted.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804270135420_RemoveRequiredAutomaticChecking.cs" />
+    <Compile Include="Migrations\201804270135420_RemoveRequiredAutomaticChecking.Designer.cs">
+      <DependentUpon>201804270135420_RemoveRequiredAutomaticChecking.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -1018,6 +1022,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804260950525_ApplicationUserIsDeleted.resx">
       <DependentUpon>201804260950525_ApplicationUserIsDeleted.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804270135420_RemoveRequiredAutomaticChecking.resx">
+      <DependentUpon>201804270135420_RemoveRequiredAutomaticChecking.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
