Add option for cookie name

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -27,6 +27,7 @@
     },
     "web": {
         "cookieKeyRingDirectory": "../cookie_protection_keys/",
+        "cookieName": "ulearn.auth",
         "cookieDomain": "localhost"
     }
 }
