--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -14,6 +14,7 @@
     },
     "web": {
         "cookieKeyRingDirectory": "../cookie_protection_keys/",
+        "cookieName": "ulearn.auth",
         "cookieDomain": "localhost"
     }
 }
