--- a/src/Database/packages.config
+++ b/src/Database/packages.config
@@ -68,4 +68,5 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
+  <package id="Z.EntityFramework.Plus.EF6" version="1.7.19" targetFramework="net47" />
 </packages>
